--- a/_config.yml
+++ b/_config.yml
@@ -19,7 +19,7 @@ twitter: https://twitter.com/rayrayfok
 
 # Images (e.g., your profile picture and your website's favicon)
 # "favicon" and "favicon_dark" are used for the light and dark modes, respectively.
-avatar: ./assets/img/profile.png
+avatar: ./assets/img/profile.jpg
 favicon: ./assets/img/favicon.png
 favicon_dark: ./assets/img/favicon.png
 
