--- a/_config.yml
+++ b/_config.yml
@@ -13,7 +13,7 @@ description: Raymond Fok's academic website.
 # If you don't need one of them, you may delete the corresponding line.
 google_scholar: https://scholar.google.com/citations?user=BuE1X6oAAAAJ
 semantic_scholar: https://www.semanticscholar.org/author/Raymond-Fok/27083453
-# cv_link: assets/files/curriculum_vitae.pdf
+cv_link: assets/files/cv.pdf
 github_link: https://github.com/rayfok
 twitter: https://twitter.com/rayrayfok
 
