--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 # Basic Information
 title: Raymond Fok
-position: Ph.D. Student
+position: Ph.D. Candidate
 affiliation: University of Washington
 email: rayfok (at) cs.washington.edu
 
