--- a/_config.yml
+++ b/_config.yml
@@ -14,8 +14,10 @@ description: Raymond Fok's academic website.
 google_scholar: https://scholar.google.com/citations?user=BuE1X6oAAAAJ
 semantic_scholar: https://www.semanticscholar.org/author/Raymond-Fok/27083453
 cv_link: assets/files/cv.pdf
+resume_link: assets/files/resume.pdf
 github_link: https://github.com/rayfok
 twitter: https://twitter.com/rayrayfok
+linkedin: https://www.linkedin.com/in/raymond-fok/
 
 # Images (e.g., your profile picture and your website's favicon)
 # "favicon" and "favicon_dark" are used for the light and dark modes, respectively.
