--- a/_config.yml
+++ b/_config.yml
@@ -1,8 +1,8 @@
 # Basic Information
 title: Raymond Fok
-position: Ph.D. Candidate
-affiliation: University of Washington
-email: rayfok (at) cs.washington.edu
+position: Senior Applied Scientist
+affiliation: Microsoft
+email: raymondfok (at) microsoft.com
 
 # Search Engine Optimization (SEO)
 # The following information is used to improve the website traffic from search engines, e.g., Google.
